--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,10 +87,9 @@ dependencies {
     implementation(libs.androidx.lifecycle.viewmodel.compose)
     implementation(libs.coil.compose)
     implementation(libs.coil)
-    def koin_version = '3.4.0'
-    implementation ("io.insert-koin:koin-android:$koin_version")
+    implementation libs.androidx.navigation.compose
+    implementation libs.androidx.appcompat
 
-    implementation "com.google.dagger:hilt-android:2.37"
-    kapt "com.google.dagger:hilt-android-compiler:2.37"
+
 
 }
