--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,9 +87,10 @@ dependencies {
     implementation(libs.androidx.lifecycle.viewmodel.compose)
     implementation(libs.coil.compose)
     implementation(libs.coil)
-    implementation libs.androidx.navigation.compose
-    implementation libs.androidx.appcompat
+    def koin_version = '3.4.0'
+    implementation ("io.insert-koin:koin-android:$koin_version")
 
-
+    implementation "com.google.dagger:hilt-android:2.37"
+    kapt "com.google.dagger:hilt-android-compiler:2.37"
 
 }
