--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,9 +6,11 @@ google-material = "1.9.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
+kotlinx-coroutines-test = "1.6.4"
 lifecycle-runtime-ktx = "2.6.1"
 activity-compose = "1.7.1"
 compose-bom = "2023.05.01"
+mockito-core = "3.11.2"
 org-jetbrains-kotlin-android = "1.8.20"
 appcompat = "1.6.1"
 material = "1.8.0"
@@ -27,6 +29,7 @@ assisted-inject-processor-dagger2 = "0.6.0"
 coroutines-core = "1.6.4"
 coroutines-android = "1.6.4"
 glide = "4.12.0"
+retrofit-mock = "2.9.0"
 room-runtime = "2.4.3"
 room-ktx = "2.4.3"
 room-compiler = "2.4.3"
@@ -46,10 +49,13 @@ core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines-test" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 material = { module = "com.google.android.material:material", version.ref = "google-material" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito-core" }
+retrofit-mock = { module = "com.squareup.retrofit2:retrofit-mock", version.ref = "retrofit-mock" }
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
